<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.sheet.FilterFragment">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/filter"
        android:textSize="30sp"
        app:drawableStartCompat="@drawable/filter_svgrepo_com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/kateqoriya"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_margin="15dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/limit"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView15">

        <RadioGroup
            android:id="@+id/rgCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rball"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:padding="12dp"
                android:text="Hamısı"
                android:textColor="@color/black"
                android:textSize="14sp">

            </androidx.appcompat.widget.AppCompatRadioButton>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbsmartphones"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/smartphones"
                android:textColor="@color/black"
                android:textSize="14sp">

            </androidx.appcompat.widget.AppCompatRadioButton>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rblaptop"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/laptops"
                android:textColor="@color/black"
                android:textSize="14sp">

            </androidx.appcompat.widget.AppCompatRadioButton>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbfragrances"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="12dp"
                android:text="fragrances"
                android:textColor="@color/black"
                android:textSize="14sp">

            </androidx.appcompat.widget.AppCompatRadioButton>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbskincare"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="12dp"
                android:text="skincare"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbgroceries"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="12dp"
                android:text="groceries"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbhomedec"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="12dp"
                android:text="home-decoration"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatRadioButton

                android:id="@+id/rbfurniture"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="12dp"
                android:text="furniture"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatRadioButton

                android:id="@+id/rbtops"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="12dp"
                android:text="tops"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatRadioButton

                android:id="@+id/rbwomensdress"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="12dp"
                android:text="women-dresses"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatRadioButton

                android:id="@+id/rbwomensshoes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="12dp"
                android:text="women-shoes"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatRadioButton

                android:id="@+id/rbmensshirts"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="12dp"
                android:text="mens-shirts"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatRadioButton

                android:id="@+id/rbmensshoes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="12dp"
                android:text="mens-shoes"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatRadioButton

                android:id="@+id/rbmenswatches"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="12dp"
                android:text="mens-watches"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatRadioButton

                android:id="@+id/rbwomenswatch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="12dp"
                android:text="women-watches"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatRadioButton

                android:id="@+id/rbwomensbag"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="12dp"
                android:text="women-bags"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatRadioButton

                android:id="@+id/rbwomensjew"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="12dp"
                android:text="women-jewellery"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatRadioButton

                android:id="@+id/rbsunglasses"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="12dp"
                android:text="sunglasses"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatRadioButton

                android:id="@+id/rbautomotive"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="12dp"
                android:text="automotive"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatRadioButton

                android:id="@+id/rbmotorcycle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="12dp"
                android:text="lighting"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatRadioButton

                android:id="@+id/rblighting"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="12dp"
                android:text="motorcycle"
                android:textColor="@color/black"
                android:textSize="14sp" />


        </RadioGroup>

    </androidx.core.widget.NestedScrollView>


    <RadioGroup
        android:id="@+id/rglimit"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_margin="20dp"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/radio_selector"
            android:button="@null"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/_5"
            android:textColor="@color/black"
            android:textSize="14sp">

        </androidx.appcompat.widget.AppCompatRadioButton>

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:background="@drawable/radio_selector"
            android:button="@null"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/_10"
            android:textColor="@color/black"
            android:textSize="14sp">

        </androidx.appcompat.widget.AppCompatRadioButton>

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb15"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:background="@drawable/radio_selector"
            android:button="@null"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/_15"
            android:textColor="@color/black"
            android:textSize="14sp">

        </androidx.appcompat.widget.AppCompatRadioButton>

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/choose"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:background="@drawable/radio_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:padding="12dp"
            android:text="Seç"
            android:textColor="@color/black"
            android:textSize="14sp">

        </androidx.appcompat.widget.AppCompatRadioButton>


    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/savebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Yadda saxla"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rglimit"
        app:layout_constraintTop_toBottomOf="@+id/rglimit" />
</androidx.constraintlayout.widget.ConstraintLayout>